@@ -1,21 +1,18 @@
   /*----------------------------- SELECTOR: ACME -----------------------------*/
 
-  (function(Selector) {
+  (function(Selector, NodeList) {
     Selector.match = function match(element, selector) {
       var item, i = 0,
-       results = acme.query(String(selector || ''), getDocument(element));
+       results = acme.query(String(selector || ''), Fuse.getDocument(element));
       while (item = results[i++])
         if (item === element) return true;
       return false;
     };
 
     Selector.select = function select(selector, context) {
-      return toList(acme.query(String(selector || ''), context || Fuse._doc));
+      return toList(acme.query(String(selector || ''),
+        context && context.raw || context || Fuse._doc));
     };
 
-    var getDocument = getDocument,
-     toList =         Fuse.Lust.fromNodeList,
-     match =          null,
-     select =         null;
-
-  })(Fuse.Dom.Selector);
+    var toList = NodeList.fromNodeList, match = null, select = null;
+  })(Fuse.Dom.Selector, Fuse.Dom.NodeList);
