@@ -1,10 +1,10 @@
   /*--------------------------- SELECTOR: DOMQUERY ---------------------------*/
 
-  (function(Selector) {
+  (function(Selector, NodeList) {
     Selector.match = function match(element, selector) {
       function match(element, selector) {
         var item, i = 0,
-         results = extSelect(String(selector || ''), getDocument(element));
+         results = extSelect(String(selector || ''), Fuse.getDocument(element));
         while (item = results[i++])
           if (item === element) return true;
         return false;
@@ -15,14 +15,10 @@
     };
 
     Selector.select = function select(selector, context) {
-      return toList(extSelect(String(selector || ''), context || Fuse._doc));
+      return toList(extSelect(String(selector || ''),
+        context && context.raw || context || Fuse._doc));
     };
 
-    var extSelect,
-     getDocument = getDocument,
-     toList =      Fuse.Lust.fromNodeList,
-     match =       null,
-     select =      null;
-
-  })(Fuse.Dom.Selector);
+    var extSelect, toList = NodeList.fromNodeList, match = null, select = null;
+  })(Fuse.Dom.Selector, Fuse.Dom.NodeList);
 
