@@ -1,7 +1,16 @@
 <%= include 'HEADER' %>
 (function(global) {
 
-  var Fuse =
+  // private vars
+  var Fuse, Bug, Data, Element, Feature, Form, Func, Obj, Node, NodeList,
+   $break, _extend, addListMethods, bind, capitalize, clone, concatList,
+   decorate, defer, eachKey, emptyFunction, escapeRegExpChars, expando,
+   getDocument, getNodeName, getWindow, hasKey, inspect, isArray, isElement,
+   isEmpty, isHash, isHostObject, isFunction, isNumber, isPrimitive, isRegExp,
+   isSameOrigin, isString, isUndefined, K, prependList, slice, toInteger,
+   toString, undef, userAgent;
+
+  Fuse =
   global.Fuse = function Fuse() { };
 
   Fuse._body =
@@ -35,138 +44,145 @@
 
   Fuse.version = '<%= FUSEJS_VERSION %>';
 
-  /*----------------------- PRIVATE VARIABLES/METHODS ------------------------*/
+  /*--------------------------------------------------------------------------*/
 
-  var Bug, Data, Element, Feature, Field, Form, Func, Obj, Node, NodeList,
-   _extend, addListMethods, bind, capitalize, clone, decorate, defer, eachKey,
-   hasKey, inspect, isArray, isElement, isEmpty, isHash, isFunction, isNumber,
-   isPrimitive, isRegExp, isSameOrigin, isString, isUndefined, undef,
+  // Host objects have a range of typeof values. For example:
+  // document.createElement('div').offsetParent -> unknown
+  // document.createElement -> object
+  isHostObject = (function() {
+    var HOST_TYPES = { 'function': 1, 'object': 1, 'unknown': 1 };
+    return function(object, property) {
+      return !!HOST_TYPES[typeof object[property]];
+    };
+  })();
 
-   $break =
-   Fuse.$break = function $break() { },
+  $break =
+  Fuse.$break = function $break() { };
 
-   emptyFunction =
-   Fuse.emptyFunction = function emptyFunction() { },
+  emptyFunction =
+  Fuse.emptyFunction = function emptyFunction() { };
 
-   K =
-   Fuse.K = function K(x) { return x },
+  K =
+  Fuse.K = function K(x) { return x };
 
-   concatList = function(list, otherList) {
-     var pad = list.length, length = otherList.length;
-     while (length--) list[pad + length] = otherList[length];
-     return list;
-   },
-
-   escapeRegExpChars = (function() {
-     var matchSpecialChars = /([.*+?^=!:${}()|[\]\/\\])/g;
-     return function(string) {
-       return String(string).replace(matchSpecialChars, '\\$1');
-     };
-   })(),
-
-   // a unqiue 15 char id used throughout Fuse
-   expando = '_fuse' + String(+new Date).slice(0, 10),
-
-   // Check for `ownerDocument` first because an element of a document fragment
-   // will have a `document` property that is NOT the pages document object.
-   getDocument = function(element) {
-     return element.ownerDocument || element.document ||
-       (element.nodeType === 9 ? element : Fuse._doc);
-   },
-
-   getNodeName = Fuse._docEl.nodeName === 'HTML'
-     ? function(element) { return element.nodeName }
-     : function(element) { return element.nodeName.toUpperCase() },
-
-   getWindow = function(element) {
-     var frame, i = 0, doc = getDocument(element), frames = global.frames;
-     if (Fuse._doc !== doc) {
-       while (frame = frames[i++]) {
-         if (frame.document === doc) return frame;
-       }
-     }
-     return global;
-   },
-
-   // Host objects have a range of typeof values. For example:
-   // document.createElement('div').offsetParent -> unknown
-   // document.createElement -> object
-   isHostObject = function(object, property) {
-     var type = typeof object[property];
-     return type === 'function' || type === 'object' || type === 'unknown';
-   },
-
-   // Allow a pre-sugared array to be passed
-   prependList = function(list, value, results) {
-     (results = results || [])[0] = value;
-     var length = list.length;
-     while (length--) results[1 + length] = list[length];
-     return results;
-   },
-
-   // a quick way to copy an array slice.call(array, 0)
-   slice = global.Array.prototype.slice,
-
-   // ECMA-5 9.4 ToInteger implementation
-   toInteger = (function() {
-     var abs = Math.abs, floor = Math.floor,
-      maxBitwiseNumber = Math.pow(2, 31);
-
-     return function(object) {
-       var number = +object; // fast coerce to number
-       if (number == 0 || !isFinite(number)) return number || 0;
-
-       // avoid issues with large numbers against bitwise operators
-       return number < maxBitwiseNumber
-         ? number | 0
-         : (number < 0 ? -1 : 1) * floor(abs(number));
-     };
-   })(),
-
-   // used to access the an object's internal [[Class]] property
-   toString = global.Object.prototype.toString,
-
-   // used for some required browser sniffing
-   userAgent = global.navigator.userAgent;
-
-  // Based on work by Diego Perini
-  // Safari 2.0.x returns `Abstract View` instead of `global`
-  if (isHostObject(document, 'defaultView') && Fuse._doc.defaultView === global)
-    getWindow = function(element) { return getDocument(element).defaultView || element };
-  else if (isHostObject(Fuse._doc, 'parentWindow'))
-    getWindow = function(element) { return getDocument(element).parentWindow || element };
-
-  /*--------------------------- NAMESPACE UTILITY ----------------------------*/
-
-  Fuse.addNS = function(path) {
-    var part, i = 0,
-     global     = Fuse._global,
-     object     = this,
-     propIndex  = 0,
-     parts      = path.split('.'),
-     length     = parts.length,
-     properties = slice.call(arguments, 1);
-
-    // if parent is passed then incriment the propIndex by 1
-    if (typeof properties[0] === 'function') propIndex++;
-    properties[propIndex] = properties[propIndex] || { };
-
-    while (part = parts[i++]) {
-      if (object[part]) {
-        object = object[part];
-      } else {
-        if (i === length) {
-          // if no parent pass prepend object as parent
-          if (!propIndex) properties = prependList(properties, object);
-          object = object[part] = Fuse.Class.apply(global,
-            hasKey(properties[1], 'constructor') ? properties :
-              (properties[1].constructor = part) && properties);
-        }
-        else object = object[part] = Fuse.Class(object, { 'constructor': part });
-      }
-    }
-    return object;
+  getDocument =
+  Fuse.getDocument = function getDocument(element) {
+    return element.ownerDocument || element.document ||
+      (element.nodeType === 9 ? element : Fuse._doc);
   };
+
+  getWindow =
+  Fuse.getWindow = (function() {
+    var getWindow = function getWindow(element) {
+      var frame, i = 0, doc = getDocument(element), frames = global.frames;
+      if (Fuse._doc !== doc)
+        while (frame = frames[i++])
+          if (frame.document === doc) return frame;
+      return global;
+    };
+
+    // Based on work by Diego Perini
+    // Safari 2.0.x returns `Abstract View` instead of `global`
+    if (isHostObject(document, 'defaultView') && Fuse._doc.defaultView === global) {
+      getWindow = function getWindow(element) {
+        return getDocument(element).defaultView || element;
+      };
+    }
+    else if (isHostObject(Fuse._doc, 'parentWindow')) {
+      getWindow = function getWindow(element) {
+        return getDocument(element).parentWindow || element;
+      };
+    }
+    return getWindow;
+  })();
+
+  concatList = function(list, otherList) {
+    var pad = list.length, length = otherList.length;
+    while (length--) list[pad + length] = otherList[length];
+    return list;
+  };
+
+  // Allow a pre-sugared array to be passed
+  prependList = function(list, value, results) {
+    (results = results || [])[0] = value;
+    var length = list.length;
+    while (length--) results[1 + length] = list[length];
+    return results;
+  };
+
+  escapeRegExpChars = (function() {
+    var matchSpecialChars = /([.*+?^=!:${}()|[\]\/\\])/g;
+    return function(string) {
+      return String(string).replace(matchSpecialChars, '\\$1');
+    };
+  })();
+
+  getNodeName = Fuse._docEl.nodeName === 'HTML'
+    ? function(element) { return element.nodeName; }
+    : function(element) { return element.nodeName.toUpperCase(); };
+
+  // ECMA-5 9.4 ToInteger implementation
+  toInteger = (function() {
+    var abs = Math.abs, floor = Math.floor,
+     maxBitwiseNumber = Math.pow(2, 31);
+
+    return function(object) {
+      var number = +object; // fast coerce to number
+      if (number == 0 || !isFinite(number)) return number || 0;
+
+      // avoid issues with large numbers against bitwise operators
+      return number < maxBitwiseNumber
+        ? number | 0
+        : (number < 0 ? -1 : 1) * floor(abs(number));
+    };
+  })();
+
+  // a unqiue 15 char id used throughout Fuse
+  expando = '_fuse' + String(+new Date).slice(0, 10);
+
+  // a quick way to copy an array slice.call(array, 0)
+  slice = global.Array.prototype.slice;
+
+  // used to access the an object's internal [[Class]] property
+  toString = global.Object.prototype.toString;
+
+  // used for some required browser sniffing
+  userAgent = global.navigator.userAgent;
+
+  /*--------------------------------------------------------------------------*/
+
+  Fuse.addNS = (function() {
+    function addNS(path) {
+      var part, i = 0,
+       object     = this,
+       propIndex  = 0,
+       parts      = path.split('.'),
+       length     = parts.length,
+       properties = slice.call(arguments, 1);
+
+      // if parent is passed then incriment the propIndex by 1
+      if (typeof properties[0] === 'function') propIndex++;
+      properties[propIndex] = properties[propIndex] || { };
+
+      while (part = parts[i++]) {
+        if (object[part]) {
+          object = object[part];
+        } else {
+          if (i === length) {
+            // if no parent pass prepend object as parent
+            if (!propIndex) properties = prependList(properties, object);
+            object = object[part] = Fuse.Class.apply(global,
+              hasKey(properties[1], 'constructor') ? properties :
+                (properties[1].constructor = part) && properties);
+          }
+          else object = object[part] = Fuse.Class(object, { 'constructor': part });
+        }
+      }
+      return object;
+    }
+
+    return addNS;
+  })();
 
 <%= include(
    'env.js',
@@ -189,7 +205,7 @@
    'lang/template.js',
    'lang/timer.js',
 
-   
+
    'dom/data.js',
    'dom/node.js',
 
